--- a/R/FRRO2Compare_DC.Rmd
+++ b/R/FRRO2Compare_DC.Rmd
@@ -364,7 +364,10 @@ Merge O2Slopes Data with FRRf Data and Catalog
 
 ```{r}
 O2FRRfMeta <- left_join(x = FRRfData, y = O2Slopes, by = c(c("ObsDate" = "Date"),  "CultureID", "Ex_WL", "ActPARCorr" = "ActPARCorrinter"), suffix = c("FRRf", "O2"), keep = FALSE) %>%
-   left_join(x = ., y = MetaData, by = c("CultureID" = "id"))
+   left_join(x = ., y = MetaData, by = c("CultureID" = "id")) %>%
+  filter(O2evln_O2ls > 0) %>%
+  select(-c("tissue_treated_plate", "culture_inocul_L", "media_inocul_L", "target_media_id", "inoc_media_id", "nutrient_status", "imipenem_ug_mL", "cefoxitin_ug_mL", "meropenem_ug_mL", "ampicillin_ug_mL")) %>%
+  select(-c("RFID_User_Data": "Dur.Wat"))
 
 #%>%
   #select((-c("Alp4QA", "Tau4QA"))) %>% #only if present
@@ -375,10 +378,7 @@ O2FRRfMeta <- left_join(x = FRRfData, y = O2Slopes, by = c(c("ObsDate" = "Date")
 
 # Cross plots of O2 evolution and FRRf electron transport estimators
 ```{r O2FRRfcrossplots}
-
-
 O2FRRfMeta %>%
-  filter(O2evln_O2ls > 0) %>%
   filter(JVPSII_aLHIIOxbomax > 0) %>%
   ggplot() +
   geom_point(aes(x = O2evln_O2ls, y = JVPSII_aLHIIOxbomax, colour = Ex_WL)) +
@@ -388,7 +388,6 @@ O2FRRfMeta %>%
 
 
 O2FRRfMeta %>%
-  filter(O2evln_O2ls > 0) %>%
   filter(ETRCtauav > 0) %>%
   ggplot() +
   geom_point(aes(x = O2evln_O2ls, y = ETRCtauav, colour = Ex_WL)) +
@@ -397,7 +396,6 @@ O2FRRfMeta %>%
   theme_bw()
 
 O2FRRfMeta %>%
-  filter(O2evln_O2ls > 0) %>%
   filter(ETRqpOxbo > 0) %>%
   ggplot() +
   geom_point(aes(x = O2evln_O2ls, y = ETRqpOxbo, colour = Ex_WL)) +
@@ -409,7 +407,6 @@ O2FRRfMeta %>%
   theme_bw()
 
 O2FRRfMeta %>%
-  filter(O2evln_O2ls > 0) %>%
   filter(ETRGorbo > 0) %>%
   ggplot() +
   geom_point(aes(x = O2evln_O2ls, y = ETRGorbo, colour = Ex_WL)) +
@@ -421,7 +418,6 @@ O2FRRfMeta %>%
   theme_bw()
 
 O2FRRfMeta %>%
-  filter(O2evln_O2ls > 0) %>%
   filter(JVPSII_ETRtauav_FoSig > 0) %>%
   ggplot() +
   geom_point(aes(x = O2evln_O2ls, y = JVPSII_ETRtauav_FoSig, colour = Ex_WL)) +
@@ -433,7 +429,6 @@ O2FRRfMeta %>%
   theme_bw()
 
 O2FRRfMeta %>%
-  filter(O2evln_O2ls > 0) %>%
   filter(JVPSII_ETRqpOxbo_FoSig > 0) %>%
   ggplot() +
   geom_point(aes(x = O2evln_O2ls, y = JVPSII_ETRqpOxbo_FoSig, colour = Ex_WL)) +
@@ -445,7 +440,6 @@ O2FRRfMeta %>%
   theme_bw()
 
 O2FRRfMeta %>%
-  filter(O2evln_O2ls > 0) %>%
   filter(JVPSII_ETRtauav_aLHII_Sig > 0) %>%
   ggplot() +
   geom_point(aes(x = O2evln_O2ls, y = JVPSII_ETRtauav_aLHII_Sig, colour = Ex_WL)) +
@@ -457,7 +451,6 @@ O2FRRfMeta %>%
   theme_bw()
 
 O2FRRfMeta %>%
-  filter(O2evln_O2ls > 0) %>%
   filter(JVPSII_ETRqpOxbo_aLHII_Sig > 0) %>%
   ggplot() +
   geom_point(aes(x = O2evln_O2ls, y = JVPSII_ETRqpOxbo_aLHII_Sig, colour = Ex_WL)) +
@@ -476,8 +469,15 @@ For e- PSII-1 s-1 estimators like ETRqpOxbo, a plot vs. O2 evln_O2ls should give
 Graphical Test for stability of [PSII] estimates.
 ```{r PSIIstabilitytestplot}
 O2FRRfMeta %>%
-  filter(O2evln_O2ls > 0) %>%
   filter(ETRqpOxbo > 0) %>%
+  ggplot() +
+  geom_point(aes(y  = (O2evln_O2ls * 4)/ETRqpOxbo, x = ActPARCorr, colour = Ex_WL)) +
+  scale_colour_manual(values = Colours_nm) +
+  facet_grid(cols = vars(strain)) +
+  theme_bw()
+
+O2FRRfMeta %>%
+  filter(ETRGorbo > 0) %>%
   ggplot() +
   geom_point(aes(y  = (O2evln_O2ls * 4)/ETRqpOxbo, x = ActPARCorr, colour = Ex_WL)) +
   scale_colour_manual(values = Colours_nm) +
@@ -499,11 +499,8 @@ O2FRRfMeta445 <- O2FRRfMeta %>%
   #filter(LR_sFRRfinter != 733) %>% #MaBe3727 20211210, TC
   #filter(LR_sFRRfinter != 732) %>% #for MaBe3726 20211210, noTC
   filter(O2evln_O2ls > lag(O2evln_O2ls) & ActPARCorr > lag(ActPARCorr))
-
-O2FRRfMetaDark <- O2FRRfMeta %>%
-  filter(ActPARCorr == 0) 
   
-O2FRRfMetaFilter <- rbind(O2FRRfMeta445, O2FRRfMeta590, O2FRRfMetaDark)
+O2FRRfMetaFilter <- rbind(O2FRRfMeta445, O2FRRfMeta590)
 
 ```
 
@@ -513,77 +510,75 @@ If estimate of [PSII] change vs. ActPARCorr it indicates depatures from assumpti
 
 # Fit regressions of FRRf estimators vs. O2evln
 ```{r FRRFO2regressions}
+
 O2FRRfMetaNest <-  O2FRRfMetaFilter %>%
-  filter(O2evln_O2ls > 0) %>%
-  #filter(O2evln_O2ls_ALT > 0) %>%
-  filter(JVPSII_aLHIIminmax > 0) %>%
   nest(data = -c(Ex_WL)) %>%
   mutate(
+  JVPSII_aLHIIOxbomax_O2 = map(data, possibly(~lm(JVPSII_aLHIIOxbomax ~ O2evln_O2ls, data = .x), otherwise = NULL)),
+  JVPSII_aLHIIOxbomax_O2_tidied =  map(JVPSII_aLHIIOxbomax_O2, possibly(tidy, otherwise = NULL)),
+  JVPSII_aLHIIOxbomax_O2_param = map(JVPSII_aLHIIOxbomax_O2, possibly(glance, otherwise = NULL)),
+  ETRCtauav_O2 = map(data, possibly(~lm(ETRCtauav ~ O2evln_O2ls, data = .x), otherwise = NULL)),
+  ETRCtauav_O2_tidied =  map(ETRCtauav_O2, possibly(tidy, otherwise = NULL)),
+  ETRCtauav_O2_param = map(ETRCtauav_O2, possibly(glance, otherwise = NULL)),
   ETRqpOxbo_O2 = map(data, possibly(~lm(ETRqpOxbo ~ O2evln_O2ls, data = .x), otherwise = NULL)),
-  ETRqpOxbo_O2_predict = map(ETRqpOxbo_O2, possibly(augment, otherwise = NULL)),
   ETRqpOxbo_O2_tidied =  map(ETRqpOxbo_O2, possibly(tidy, otherwise = NULL)),
   ETRqpOxbo_O2_param = map(ETRqpOxbo_O2, possibly(glance, otherwise = NULL)),
-  JVPSII_aLHIIminmax_O2 = map(data, possibly(~lm(JVPSII_aLHIIminmax ~ O2evln_O2ls, data = .x), otherwise = NULL)),
-  JVPSII_O2_predict = map(JVPSII_aLHIIminmax_O2, possibly(augment, otherwise = NULL)),
-  JVPSII_O2_tidied =  map(JVPSII_aLHIIminmax_O2, possibly(tidy, otherwise = NULL)),
-  JVPSII_O2_param = map(JVPSII_aLHIIminmax_O2, possibly(glance, otherwise = NULL)),
-  JVPSII_ETRqpOxbo_O2 = map(data, possibly(~lm(JVPSII_ETRqpOxbo ~ O2evln_O2ls, data = .x), otherwise = NULL)),
-  JVPSII_ETRqpOxbo_O2_predict = map(JVPSII_ETRqpOxbo_O2, possibly(augment, otherwise = NULL)),
-  JVPSII_ETRqpOxbo_O2_tidied =  map(JVPSII_ETRqpOxbo_O2, possibly(tidy, otherwise = NULL)),
-  JVPSII_ETRqpOxbo_O2_param = map(JVPSII_ETRqpOxbo_O2, possibly(glance, otherwise = NULL))#,
-  # ETRqpOxbo_O2_alt = map(data, possibly(~lm(ETRqpOxbo ~ O2evln_O2ls_ALT, data = .x), otherwise = NULL)),
-  # ETRqpOxbo_O2_predict_alt = map(ETRqpOxbo_O2_alt, possibly(augment, otherwise = NULL)),
-  # ETRqpOxbo_O2_tidied_alt =  map(ETRqpOxbo_O2_alt, possibly(tidy, otherwise = NULL)),
-  # ETRqpOxbo_O2_param_alt = map(ETRqpOxbo_O2_alt, possibly(glance, otherwise = NULL)),
-  # JVPSII_aLHIIminmax_O2_alt = map(data, possibly(~lm(JVPSII_aLHIIminmax ~ O2evln_O2ls_ALT, data = .x), otherwise = NULL)),
-  # JVPSII_O2_predict_alt = map(JVPSII_aLHIIminmax_O2_alt, possibly(augment, otherwise = NULL)),
-  # JVPSII_O2_tidied_alt =  map(JVPSII_aLHIIminmax_O2_alt, possibly(tidy, otherwise = NULL)),
-  # JVPSII_O2_param_alt = map(JVPSII_aLHIIminmax_O2_alt, possibly(glance, otherwise = NULL)),
-  # JVPSII_ETRqpOxbo_O2_alt = map(data, possibly(~lm(JVPSII_ETRqpOxbo ~ O2evln_O2ls_ALT, data = .x), otherwise = NULL)),
-  # JVPSII_ETRqpOxbo_O2_predict_alt = map(JVPSII_ETRqpOxbo_O2_alt, possibly(augment, otherwise = NULL)),
-  # JVPSII_ETRqpOxbo_O2_tidied_alt =  map(JVPSII_ETRqpOxbo_O2_alt, possibly(tidy, otherwise = NULL)),
-  # JVPSII_ETRqpOxbo_O2_param_alt = map(JVPSII_ETRqpOxbo_O2_alt, possibly(glance, otherwise = NULL))
+  ETRGorbo_O2 = map(data, possibly(~lm(ETRGorbo ~ O2evln_O2ls, data = .x), otherwise = NULL)),
+  ETRGorbo_O2_tidied =  map(ETRGorbo_O2, possibly(tidy, otherwise = NULL)),
+  ETRGorbo_O2_param = map(ETRGorbo_O2, possibly(glance, otherwise = NULL)),
+  JVPSII_ETRtauav_FoSig_O2 = map(data, possibly(~lm(JVPSII_ETRtauav_FoSig ~ O2evln_O2ls, data = .x), otherwise = NULL)),
+  JVPSII_ETRtauav_FoSig_O2_tidied =  map(JVPSII_ETRtauav_FoSig_O2, possibly(tidy, otherwise = NULL)),
+  JVPSII_ETRtauav_FoSig_O2_param = map(JVPSII_ETRtauav_FoSig_O2, possibly(glance, otherwise = NULL)),
+   JVPSII_ETRqpOxbo_FoSig_O2 = map(data, possibly(~lm(JVPSII_ETRqpOxbo_FoSig ~ O2evln_O2ls, data = .x), otherwise = NULL)),
+  JVPSII_ETRqpOxbo_FoSig_O2_tidied =  map(JVPSII_ETRqpOxbo_FoSig_O2, possibly(tidy, otherwise = NULL)),
+  JVPSII_ETRqpOxbo_FoSig_O2_param = map(JVPSII_ETRqpOxbo_FoSig_O2, possibly(glance, otherwise = NULL)),
+  JVPSII_ETRtauav_aLHII_Sig_O2 = map(data, possibly(~lm(JVPSII_ETRtauav_aLHII_Sig ~ O2evln_O2ls, data = .x), otherwise = NULL)),
+  JVPSII_ETRtauav_aLHII_Sig_O2_tidied =  map(JVPSII_ETRtauav_aLHII_Sig_O2, possibly(tidy, otherwise = NULL)),
+  JVPSII_ETRtauav_aLHII_Sig_O2_param = map(JVPSII_ETRtauav_aLHII_Sig_O2, possibly(glance, otherwise = NULL)),
+  JVPSII_ETRqpOxbo_aLHII_Sig_O2 = map(data, possibly(~lm(JVPSII_ETRqpOxbo_aLHII_Sig ~ O2evln_O2ls, data = .x), otherwise = NULL)),
+  JVPSII_ETRqpOxbo_aLHII_Sig_O2_tidied =  map(JVPSII_ETRqpOxbo_aLHII_Sig_O2, possibly(tidy, otherwise = NULL)),
+  JVPSII_ETRqpOxbo_aLHII_Sig_O2_param = map(JVPSII_ETRqpOxbo_aLHII_Sig_O2, possibly(glance, otherwise = NULL))
   )
 
-
-O2FRRfMetaNest %>%
-  unnest(JVPSII_O2_predict) %>%
-  ggplot() +
-  geom_line(aes(x = O2evln_O2ls, y = .fitted), colour = "black", linetype = "dashed") +
- # geom_line(aes(x = O2evln_O2ls, y = .fitted + .se.fit), colour = "grey", linetype = "dashed") +
- #   geom_line(aes(x = O2evln_O2ls, y = .fitted - .se.fit), colour = "grey", linetype = "dashed") +
-  geom_point(aes(x = O2evln_O2ls, y = JVPSII_aLHIIminmax),colour = "darkgreen") +
-  geom_point(aes(x = O2evln_O2ls, y = .resid), colour = "darkred", size = 0.1) +
-  geom_hline(yintercept = 0,linetype = "dashed") +
-  facet_grid(cols = vars(Ex_WL)) +
-  theme_bw()
-
+# 
 # O2FRRfMetaNest %>%
-#   unnest(JVPSII_O2_predict_alt) %>%
+#   unnest(JVPSII_O2_predict) %>%
 #   ggplot() +
-#   geom_line(aes(x = O2evln_O2ls_ALT, y = .fitted), colour = "black", linetype = "dashed") +
+#   geom_line(aes(x = O2evln_O2ls, y = .fitted), colour = "black", linetype = "dashed") +
 #  # geom_line(aes(x = O2evln_O2ls, y = .fitted + .se.fit), colour = "grey", linetype = "dashed") +
 #  #   geom_line(aes(x = O2evln_O2ls, y = .fitted - .se.fit), colour = "grey", linetype = "dashed") +
-#   geom_point(aes(x = O2evln_O2ls_ALT, y = JVPSII_aLHIIminmax),colour = "darkgreen") +
-#   geom_point(aes(x = O2evln_O2ls_ALT, y = .resid), colour = "darkred", size = 0.1) +
+#   geom_point(aes(x = O2evln_O2ls, y = JVPSII_aLHIIminmax),colour = "darkgreen") +
+#   geom_point(aes(x = O2evln_O2ls, y = .resid), colour = "darkred", size = 0.1) +
 #   geom_hline(yintercept = 0,linetype = "dashed") +
 #   facet_grid(cols = vars(Ex_WL)) +
 #   theme_bw()
-
-O2FRRfMetaNest %>%
-  unnest(JVPSII_O2_tidied)#, JVPSII_O2_tidied_alt) 
-
-O2FRRfMetaNest %>%
-  unnest(JVPSII_ETRqpOxbo_O2_predict) %>%
-  ggplot() +
-  geom_line(aes(x = O2evln_O2ls, y = .fitted), colour = "black", linetype = "dashed") +
- # geom_line(aes(x = O2evln_O2ls, y = .fitted + .se.fit), colour = "grey", linetype = "dashed") +
- #   geom_line(aes(x = O2evln_O2ls, y = .fitted - .se.fit), colour = "grey", linetype = "dashed") +
-  geom_point(aes(x = O2evln_O2ls, y = JVPSII_ETRqpOxbo),colour = "darkgreen") +
-  geom_point(aes(x = O2evln_O2ls, y = .resid), colour = "darkred", size = 0.1) +
-  geom_hline(yintercept = 0,linetype = "dashed") +
-  facet_grid(cols = vars(Ex_WL)) +
-  theme_bw()
+# 
+# # O2FRRfMetaNest %>%
+# #   unnest(JVPSII_O2_predict_alt) %>%
+# #   ggplot() +
+# #   geom_line(aes(x = O2evln_O2ls_ALT, y = .fitted), colour = "black", linetype = "dashed") +
+# #  # geom_line(aes(x = O2evln_O2ls, y = .fitted + .se.fit), colour = "grey", linetype = "dashed") +
+# #  #   geom_line(aes(x = O2evln_O2ls, y = .fitted - .se.fit), colour = "grey", linetype = "dashed") +
+# #   geom_point(aes(x = O2evln_O2ls_ALT, y = JVPSII_aLHIIminmax),colour = "darkgreen") +
+# #   geom_point(aes(x = O2evln_O2ls_ALT, y = .resid), colour = "darkred", size = 0.1) +
+# #   geom_hline(yintercept = 0,linetype = "dashed") +
+# #   facet_grid(cols = vars(Ex_WL)) +
+# #   theme_bw()
+# 
+# O2FRRfMetaNest %>%
+#   unnest(JVPSII_O2_tidied)#, JVPSII_O2_tidied_alt) 
+# 
+# O2FRRfMetaNest %>%
+#   unnest(JVPSII_ETRqpOxbo_O2_predict) %>%
+#   ggplot() +
+#   geom_line(aes(x = O2evln_O2ls, y = .fitted), colour = "black", linetype = "dashed") +
+#  # geom_line(aes(x = O2evln_O2ls, y = .fitted + .se.fit), colour = "grey", linetype = "dashed") +
+#  #   geom_line(aes(x = O2evln_O2ls, y = .fitted - .se.fit), colour = "grey", linetype = "dashed") +
+#   geom_point(aes(x = O2evln_O2ls, y = JVPSII_ETRqpOxbo),colour = "darkgreen") +
+#   geom_point(aes(x = O2evln_O2ls, y = .resid), colour = "darkred", size = 0.1) +
+#   geom_hline(yintercept = 0,linetype = "dashed") +
+#   facet_grid(cols = vars(Ex_WL)) +
+#   theme_bw()
 
 # O2FRRfMetaNest %>%
 #   unnest(JVPSII_ETRqpOxbo_O2_predict_alt) %>%
@@ -605,6 +600,9 @@ O2FRRfMetaNest %>%
 
 ```{r save O2FRRfMeta}
 saveRDS(O2FRRfMetaFilter, file.path(DataOut, paste(Project, RunDate, Cuvette, StrainID, "O2FRRfMeta.Rds", sep = "_"), fsep = .Platform$file.sep))
+
+saveRDS(O2FRRfMetaNest, file.path(DataOut, paste(Project, RunDate, Cuvette, StrainID, "O2FRRfMetaNest.Rds", sep = "_"), fsep = .Platform$file.sep))
+
 ```
 
 
