Refit and comparing all TC and noTC Solisense and Optode files for 2021-12-10 and 2021-12-13.

--- a/R/FRRO2Compare_MB.Rmd
+++ b/R/FRRO2Compare_MB.Rmd
@@ -538,7 +538,7 @@ O2FRRfMetaNest %>%
 
 
 ```{r save O2FRRfMeta}
-saveRDS(O2FRRfMetaFilter, file.path(DataOut, paste(Project, RunDate, Cuvette, StrainID, "O2FRRfMeta.Rds", sep = "_"), fsep = .Platform$file.sep))
+saveRDS(O2FRRfMetaFilter, file.path(DataOut, paste(Project, Cuvette, StrainID, "O2FRRfMeta.Rds", sep = "_"), fsep = .Platform$file.sep))
 ```
 
 
