--- a/R/FRRO2Compare_DC.Rmd
+++ b/R/FRRO2Compare_DC.Rmd
@@ -126,8 +126,8 @@ FRRfData <- readRDS(file = file.path(DataInFRRf, paste("FluorO2_", RunDateFRRf, 
   #FRRf refit includes data from both dates
 RunDateOxy <- 20211210
   #20211213 alternate date
-Cuvette <- "noTC"
-StrainID <- "MaBe3729"
+Cuvette <- "TC" #TC
+StrainID <- "MaBe3729" #MaBe3724 MaBe3725 MaBe3726 MaBe3727 MaBe3728 MaBe3729
 
 ```
 
